# lgrbootcamp

./: Cargo.toml  README.md
auth_service/src/: lib.rs
auth_service_file_modules/: Cargo.toml
auth_service_file_modules/src/: lib.rs
auth_service_file_modules2/: Cargo.toml
auth_service_file_modules2/src/: auth_utils.rs  lib.rs  main.rs
bank/src/: lib.rs
bank/tests/: savings_account.rs
borrowing/src/: main.rs
box_smart_pointer/src/: main.rs
comments/src/: main.rs
constants_statics/src/: main.rs
control_flow/src/: main.rs
datatypes/src/: main.rs
deref_coercion/src/: main.rs
enums/src/: main.rs
errors_examples/: Cargo.toml
functions/src/: main.rs
generics/src/: main.rs
hello_world/src/: main.rs
impl_blocks/src/: main.rs
lifetimes/src/: main.rs
matching/src/: main.rs
multiple_error_types/src/: main.rs
my_package/: NOTES.md
my_package/src/: lib.rs  main.rs
option/src/: main.rs
ownership/src/: main.rs
ownership2/src/: main.rs
propagation_error/: Cargo.toml
propagation_error/src/: example2.txt  main.rs
rc_smart_pointer/src/: main.rs
recoverable_errors/src/: main.rs
refcell_smart_pointer/src/: main.rs
result/src/: main.rs
result_and_option/src/: example.txt  main.rs
slices/src/: main.rs
strings/src/: main.rs
structs/src/: main.rs
traits/src/: main.rs
tuple_structs/src/: main.rs
unrecoverable_errors/src/: main.rs
variables/src/: main.rs
vectors/src/: main.rs
