[workspace]
members = [
    "hello_world",
    "variables",
    "datatypes",
    "constants_statics",
    "functions",
    "control_flow",
    "comments",
    "ownership",
    "ownership2",
    "borrowing",
    "slices",
    "strings",
    "structs",
    "impl_blocks",
    "tuple_structs",
    "enums",
]
