[workspace]
members = [
    "hello_world",
    "variables",
    "datatypes",
    "constants_statics",
    "functions",
    "control_flow",
    "comments",
    "ownership",
    "ownership2",
    "borrowing",
    "slices",
    "strings",
    "structs",
    "impl_blocks",
    "tuple_structs",
    "enums",
    "matching",
    "option",
    "result",
    "vectors",
    "my_package",
    "auth_service",
    "auth_service_file_modules",
    "auth_service_file_modules2",
    "bank",
    "generics",
    "traits",
]
